# localDrop

./: README.md  package-lock.json  package.json  vite.config.ts
.github/workflows/: release.yml
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  lib.rs  main.rs
src-tauri/src/device/: discovery.rs  manager.rs  mod.rs
src-tauri/src/file/: merger.rs  mod.rs  splitter.rs
src-tauri/src/persistence/: sqlite.rs
src-tauri/src/protocol/: codec.rs  message.rs  mod.rs
src-tauri/src/transfer/: manager.rs  worker.rs
src-tauri/src/utils/: config.rs  hash.rs  mod.rs
src/api/: tauri.ts
src/components/: DeviceCard.tsx  ProgressBar.tsx  SessionTransferItem.tsx  TransferItem.tsx
src/hooks/: useTransferEvents.ts
src/pages/: HomePage.tsx  SettingsPage.tsx  TransferPage.tsx
src/stores/: useDeviceStore.ts  useTransferStore.ts
src/types/: index.ts
