[package]
name = "localdrop"
version = "0.1.0"
description = "Local network file transfer tool"
authors = ["you"]
edition = "2021"

[lib]
name = "localdrop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.29", features = ["bundled"] }
crc32fast = "1.3"
sha2 = "0.10"
uuid = { version = "1", features = ["v4"] }
mdns-sd = "0.11"
tokio-util = { version = "0.7", features = ["codec"] }
bytes = "1"
chrono = "0.4"
dirs = "5"
futures = "0.3"

